MSEARCH-16 Refactor document indexing approach